back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-api
  labels:
    app: back-api
    version: "1.0"
spec:
  selector:
    matchLabels:
      app: back-api
  replicas: 1
  template:
    metadata:
      labels:
        app: back-api
        version: "1.0"
    spec:
      containers:
      - name: back-api
        image: back-api # Overwrite it with the kustomize command.
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: registory-bot
