back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-api
  labels:
    app: back-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: back-api
  type: ClusterIP
